hour content small alignment fix

--- a/src/pages/machinedashboard/machinedashboard.less
+++ b/src/pages/machinedashboard/machinedashboard.less
@@ -784,7 +784,7 @@ x-machinetab {
       font-weight: bold;
       font-size: 1.5em;
       display: flex;
-      align-items: center;
+      align-content: center;
 
       @media (max-width: 1000px) {
         // mobile
